# src/db/models/user.js
@@ -1,28 +1,35 @@
-import mongoose from "mongoose";
+import mongoose from 'mongoose';
 
-const userSchema = new mongoose.Schema({
+const userSchema = new mongoose.Schema(
+  {
     name: {
-        type: String,
-        required: true,
+      type: String,
+      required: true,
     },
     email: {
-        type: String,
-        unique: true,
-        required: true,
+      type: String,
+      unique: true,
+      required: true,
     },
     password: {
-        type: String,
-        required: true,
+      type: String,
+      required: true,
     },
-
-}, {
-    timestamps: true, versionKey: false
-});
+    savedArticles: {
+      type: [String], // або ObjectId, якщо той чия секція прописував окрему модель Article
+      default: [],
+    },
+  },
+  {
+    timestamps: true,
+    versionKey: false,
+  },
+);
 
 userSchema.methods.toJSON = function () {
-    const obj = this.toObject();
-    delete obj.password;
-    return obj;
+  const obj = this.toObject();
+  delete obj.password;
+  return obj;
 };
 
 export const User = mongoose.model('User', userSchema);
