# src/validation/registerUserValidationSchema.js
@@ -1,7 +1,7 @@
 import Joi from 'joi';
 
 export const registerUserValidationSchema = Joi.object({
-  name: Joi.string().min(2).max(30).required(),
-  email: Joi.string().email().required(),
-  password: Joi.string().min(6).required(),
+  name: Joi.string().min(2).max(32).required(),
+  email: Joi.string().email().max(64).required(),
+  password: Joi.string().min(8).max(64).required(),
 });
